--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,13 +78,13 @@ jobs:
       echo "az repos list"
       az repos list --organization ${ORGANIZATION} --project ecl-ado-prj-iac | jq .[].remoteUrl > /tmp/repoUrls.list
 
-      #while read repoUrl; 
-      #do 
-      #  echo "Cloning $repoUrl"
-      #  git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror $repoUrl
-      #done < /tmp/repoUrls.list
-      git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror "https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev"
-      ls -lat 
+      while read repoUrl; 
+      do 
+        echo "Cloning $repoUrl"
+        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror $repoUrl
+      done < /tmp/repoUrls.list
+      #git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror "https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev"
+      ls -lat
 
 
 
