--- a/backup-azure-repos/common-backup-jobs.yml
+++ b/backup-azure-repos/common-backup-jobs.yml
@@ -44,9 +44,8 @@ jobs:
   - script: |
       echo "Package backups"
       LOCAL_FOLDER_NAME=`date +%Y%m%d%H%M%S`
-      BACKUP_FILE="azureGitRepos-${LOCAL_FOLDER_NAME}.tgz"
+      BACKUP_FILE="azureGitRepos-${REPOSITORY_COMPONENT_SUBCOMPONENT}-${LOCAL_FOLDER_NAME}.tgz"
       REPO_PREFIX="./nm-factory-*"
-      echo "##vso[task.setvariable variable=BACKUP_FILE]${BACKUP_FILE}"
       ls -lat
       mkdir ./${LOCAL_FOLDER_NAME}
       mv ${REPO_PREFIX} ./${LOCAL_FOLDER_NAME}
@@ -64,11 +63,8 @@ jobs:
         echo "BACKUP_FILE = ${BACKUP_FILE}"
 
         ACCOUNT_KEY=$(az storage account keys list --account-name ${ACCOUNT_NAME} --query="[0].value")
-        echo "##vso[task.setvariable variable=ACCOUNT_KEY]${ACCOUNT_KEY}"
         az storage account keys list --account-name ${ACCOUNT_NAME} --query="[0].value"
       
-        echo "Current Azure account:"
-        az account show
         echo "Upload backup file"
         az storage blob upload \
           --account-name ${ACCOUNT_NAME} \
@@ -89,6 +85,10 @@ jobs:
         thresholdDate=`date -d "${RETENTION}" +%Y%m%d%H%M%S`
 
         az storage blob list --account-name ${ACCOUNT_NAME} --account-key ${ACCOUNT_KEY} --container-name ${CONTAINER_NAME} --prefix ${CONTAINER_FOLDER}/ | jq .[].name | tr -d "\"" > /tmp/backups.list
+
+        #Process only repositories with the same component and subcomponent
+        grep ${REPOSITORY_COMPONENT_SUBCOMPONENT} /tmp/backups.list > /tmp/backups.list-aux
+        mv /tmp/backups.list-aux /tmp/backups.list
 
         while read line; 
         do 
