--- a/backup-azure-repos/common-backup-jobs.yml
+++ b/backup-azure-repos/common-backup-jobs.yml
@@ -90,12 +90,12 @@ jobs:
         az storage blob list --account-name ${ACCOUNT_NAME} --account-key ${ACCOUNT_KEY} --container-name ${CONTAINER_NAME} --prefix ${CONTAINER_FOLDER}/ | jq .[].name | tr -d "\"" > /tmp/backups.list
 
         #Process only repositories with the same component and subcomponent
-        grep ${REPOSITORY_COMPONENT_SUBCOMPONENT} /tmp/backups.list > /tmp/backups.list-aux
+        grep "${REPOSITORY_COMPONENT_SUBCOMPONENT}-20" /tmp/backups.list > /tmp/backups.list-aux
         mv /tmp/backups.list-aux /tmp/backups.list
 
         while read line; 
         do 
-            fileDate=`basename $line | sed  's/azureGitRepos-//g' | sed 's/.tgz//'`
+            fileDate=`basename $line | sed  's/azureGitRepos-${REPOSITORY_COMPONENT_SUBCOMPONENT}-//g' | sed 's/.tgz//'`
             echo "Comparison $fileDate -lt $thresholdDate"
             if [ "$fileDate" -lt "$thresholdDate" ]
             then
