--- a/backup-azure-repos/common-backup-jobs.yml
+++ b/backup-azure-repos/common-backup-jobs.yml
@@ -96,7 +96,7 @@ jobs:
 
         while read line; 
         do 
-            fileDate=`basename $line | sed  's/azureGitRepos-$REPOSITORY_COMPONENT_SUBCOMPONENT-//g' | sed 's/.tgz//'`
+            fileDate=`basename $line | sed  "s/azureGitRepos-$REPOSITORY_COMPONENT_SUBCOMPONENT-//g" | sed 's/.tgz//'`
             echo "Comparison $fileDate -lt $thresholdDate"
             if [ "$fileDate" -lt "$thresholdDate" ]
             then
