--- a/backup-azure-repos/azure-pipeline-repos-inf.yml
+++ b/backup-azure-repos/azure-pipeline-repos-inf.yml
@@ -48,6 +48,8 @@ resources:
   - repository: nm-factory-inf-pip-terraform
     type: git
     name: ecl-ado-prj-iac/nm-factory-inf-pip-terraform
-
+  - repository: nm-factory-inf-pip-backuptest
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-inf-pip-backuptest
 jobs:
 - template: utils/common-backup-jobs.yml
