--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -24,8 +24,7 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
-      - inputs:
-          script: |
-            echo 'Cloning into sources folder at: $(Build.SourcesDirectory)'
-            git clone https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
-            exit
+    - script: |
+        echo 'Cloning into sources folder at: $(Build.SourcesDirectory)'
+        git clone https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
+        exit
