--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -30,7 +30,13 @@ stages:
         az config set extension.use_dynamic_install=yes_without_prompt
         echo "Executing ... az devops login"
         echo $(System.AccessToken) | az devops login
-        az repos list --organization "https://dev.azure.com/ecl-ado-factory/" --project ecl-ado-prj-iac | jq .[].remoteUrl | tr -d '"'
-        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
+        az repos list --organization ${ORGANIZATION} --project ecl-ado-prj-iac | jq .[].remoteUrl | tr -d '"' > /tmp/repoUrls.list
+
+        while read repoUrl; 
+        do 
+          echo "Cloning $repoUrl"
+          git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" --mirror $repoUrl
+        done < /tmp/repoUrls.list
+        echo "List downloaded repositories"
         ls -lat
-    displayName: "Clone repositories"
+      displayName: "Clone repositories"
