--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -19,6 +19,12 @@ pool:
 #     type: git
 #     name: ecl-ado-prj-iac/nm-factory-dpl-bsp-configuration
 
+resources:
+  repositories:
+  - repository: nm-factory-dpl-bsp-configuration
+    type: git
+    name: ecl-ado-prj-iac/nm-factory-dpl-bsp-configuration
+    
 stages:
 - stage: recreate_jenkins_agent_vm 
   jobs:
