--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -32,7 +32,7 @@ stages:
         echo $(System.AccessToken) | az devops login
         git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
         ls -lat
-        cd nm-factory-inf-env-dev.git
+        cd nm-factory-inf-env-dev
         pwd
         ls -lat
       displayName: "Clone repositories"
