--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -42,6 +42,6 @@ stages:
         echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
         wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
         echo "Move terraform binary to /usr/local/bin"
-        mv ./terraform /usr/local/bin/
+        sudo mv ./terraform /usr/local/bin/
         terraform -v
       displayName: "Install Terraform"
