--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -25,6 +25,14 @@ stages:
   - job: recreate_jenkins_agent_vm
     steps:
     - script: |
+        echo "Installing Terraform"
+        echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
+        wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
+        echo "Move terraform binary to /usr/local/bin"
+        sudo mv ./terraform /usr/local/bin/
+      displayName: "Install Terraform"
+
+    - script: |
         echo "Cloning repository"
         echo "az config"
         az config set extension.use_dynamic_install=yes_without_prompt
@@ -33,15 +41,11 @@ stages:
         git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
         ls -lat
         cd nm-factory-inf-env-dev
-        pwd
-        ls -lat
       displayName: "Clone repository"
+
     - script: |
-        echo "Installing Terraform"
-        echo $PATH
-        echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
-        wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
-        echo "Move terraform binary to /usr/local/bin"
-        sudo mv ./terraform /usr/local/bin/
-        terraform -v
-      displayName: "Install Terraform"
+        echo "terraform init"
+        terraform init
+        echo "terraform plan"
+        terraform plan
+      displayName: "Run Terraform"      
