--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -44,6 +44,7 @@ stages:
       displayName: "Clone repository"
 
     - script: |
+        ls -lat
         echo "terraform init"
         terraform init
         echo "terraform plan"
