--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -45,6 +45,7 @@ stages:
 
     - script: |
         ls -lat
+        pwd
         echo "terraform init"
         terraform init
         echo "terraform plan"
