--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -27,22 +27,25 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
-    - script: |
-        echo "Installing Terraform"
-        echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
-        wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
-        echo "Move terraform binary to /usr/local/bin"
-        sudo mv ./terraform /usr/local/bin/
+    # - script: |
+    #     echo "Installing Terraform"
+    #     echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
+    #     wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
+    #     echo "Move terraform binary to /usr/local/bin"
+    #     sudo mv ./terraform /usr/local/bin/
+    #   displayName: "Install Terraform"
+
+
+    - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
+      displayName: 'Install Terraform 1.3.0'
+      inputs:
+        terraformVersion: 1.3.0
+
       displayName: "Install Terraform"
 
-    - task: AzureCLI@2
-      displayName: 'Install SSH Keys'
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: bash
-        scriptPath: '$(System.DefaultWorkingDirectory)/_pipeline/bash/az_ssh_install.sh'
-
     - script: |
+        echo "terraform -v"
+        terraform -v
         echo "Cloning repository"
         echo "az config"
         az config set extension.use_dynamic_install=yes_without_prompt
