--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -27,23 +27,12 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
-    # - script: |
-    #     echo "Installing Terraform"
-    #     echo "wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip"
-    #     wget -q "https://releases.hashicorp.com/terraform/1.3.0/terraform_1.3.0_linux_amd64.zip"; unzip terraform_1.3.0_linux_amd64.zip
-    #     echo "Move terraform binary to /usr/local/bin"
-    #     sudo mv ./terraform /usr/local/bin/
-    #   displayName: "Install Terraform"
-
-
     - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
       displayName: 'Install Terraform 1.3.0'
       inputs:
         terraformVersion: 1.3.0
 
     - script: |
-        echo "terraform -v"
-        terraform -v
         echo "Cloning repository"
         echo "az config"
         az config set extension.use_dynamic_install=yes_without_prompt
@@ -52,6 +41,26 @@ stages:
         git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
         ls -lat
       displayName: "Clone repository"
+    - task: AzureCLI@2
+      displayName: "Install SSH keys"
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+            #!/bin/bash
+
+            set -o errexit  # Exit on error
+            set -o nounset  # Exit on uninitalized vars
+            set -o pipefail # Exit on pipe exec fail
+
+            VAULT_NAME="ecl-az-fact-kvt-01-main"
+
+            [ -d ~/.ssh ] || mkdir ~/.ssh
+            [ -f ~/.ssh/id_rsa ] || az keyvault secret download --name poc-prv-key --vault-name ${VAULT_NAME} --file ~/.ssh/id_rsa
+            [ -f ~/.ssh/id_rsa.pub ] || az keyvault secret download --name poc-pub-key --vault-name ${VAULT_NAME} --file ~/.ssh/id_rsa.pub
+            [ -f ~/.ssh/known_hosts ] || az keyvault secret download --name poc-keyscan --vault-name ${VAULT_NAME} --file ~/.ssh/known_hosts
+            chmod 600 ~/.ssh/id_rsa
 
     - script: |
         cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
