add subscription env variable

--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -63,11 +63,12 @@ stages:
             chmod 600 ~/.ssh/id_rsa
 
     - script: |
-        cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
-        ls -lat
-        pwd
-        echo "terraform init"
-        terraform init
-        echo "terraform plan"
-        terraform plan
-      displayName: "Run Terraform"      
+      export ARM_TENANT_ID="9e296acd-1e44-44f0-8c77-cc9dbce85489"
+      cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
+      ls -lat
+      pwd
+      echo "terraform init"
+      terraform init
+      echo "terraform plan"
+      terraform plan
+    displayName: "Run Terraform"      
