--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -62,13 +62,10 @@ stages:
           [ -f ~/.ssh/known_hosts ] || az keyvault secret download --name poc-keyscan --vault-name ${VAULT_NAME} --file ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
 
-          export ARM_CLIENT_ID=$servicePrincipalId
-          export ARM_CLIENT_SECRET=$servicePrincipalKey
-          export ARM_TENANT_ID=$tenantId
-          cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
-          terraform init
-
     - script: |
+        export ARM_TENANT_ID="9e296acd-1e44-44f0-8c77-cc9dbce85489"
+        export ARM_CLIENT_SECRET=$(az keyvault secret download --name terraform-app-secret --vault-name ecl-az-seed-kvt-01-tfkv)
+        export ARM_CLIENT_ID=$(az keyvault secret download --name terraform-app-client-id --vault-name ecl-az-seed-kvt-01-tfkv)
         cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
         ls -lat
         pwd
