--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -74,6 +74,7 @@ stages:
       env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
+        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"
       inputs:
         azureSubscription: 'ecl-az-fact-svc-01-armconnection'
         scriptType: 'bash'
