--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -62,6 +62,7 @@ stages:
           [ -f ~/.ssh/id_rsa.pub ] || az keyvault secret download --name poc-pub-key --vault-name ${VAULT_NAME} --file ~/.ssh/id_rsa.pub
           [ -f ~/.ssh/known_hosts ] || az keyvault secret download --name poc-keyscan --vault-name ${VAULT_NAME} --file ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
+    
     - task: AzureKeyVault@2
       displayName: 'Azure Key Vault: ecl-az-seed-kvt-01-tfkv'
       inputs:
@@ -93,3 +94,4 @@ stages:
           echo "terraform init"
           terraform init
           echo "terraform plan"
+          terraform plan
