--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -13,6 +13,10 @@ pool:
 #     - main
 #   always: true
 
+variables:
+- name: TF_REPOSITORY
+  value: "https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev"
+
 resources:
   repositories:
   - repository: nm-factory-inf-env-dev
@@ -27,20 +31,27 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
+    - task: AzureKeyVault@2
+      displayName: 'Azure Key Vault: ecl-az-seed-kvt-01-tfkv'
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        KeyVaultName: 'ecl-az-seed-kvt-01-tfkv'
+        SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
+        RunAsPreJob: true
+
     - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
       displayName: 'Install Terraform 1.3.0'
       inputs:
         terraformVersion: 1.3.0
 
     - script: |
-        echo "Cloning repository"
+        echo "Cloning Terraform repository"
         echo "az config"
         az config set extension.use_dynamic_install=yes_without_prompt
         echo "Executing ... az devops login"
         echo $(System.AccessToken) | az devops login
-        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" https://ecl-ado-factory@dev.azure.com/ecl-ado-factory/ecl-ado-prj-iac/_git/nm-factory-inf-env-dev
-        ls -lat
-      displayName: "Clone repository"
+        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" ${TF_REPOSITORY}
+      displayName: "Clone Terraform repository"
     
     - task: AzureCLI@2
       displayName: "Install SSH keys"
@@ -62,14 +73,6 @@ stages:
           [ -f ~/.ssh/id_rsa.pub ] || az keyvault secret download --name poc-pub-key --vault-name ${VAULT_NAME} --file ~/.ssh/id_rsa.pub
           [ -f ~/.ssh/known_hosts ] || az keyvault secret download --name poc-keyscan --vault-name ${VAULT_NAME} --file ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
-    
-    - task: AzureKeyVault@2
-      displayName: 'Azure Key Vault: ecl-az-seed-kvt-01-tfkv'
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        KeyVaultName: 'ecl-az-seed-kvt-01-tfkv'
-        SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
-        RunAsPreJob: true
         
     - task: AzureCLI@2
       displayName: "Run Terraform" 
@@ -89,8 +92,6 @@ stages:
           set -o pipefail # Exit on pipe exec fail
 
           cd nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
-          ls -lat
-          pwd
           echo "terraform init"
           terraform init
           echo "terraform plan"
